# neurapolis-cognitive-architecture

./: .gcloudignore  .gitignore  Dockerfile  Dockerfile-streamlit  README.md  cloudbuild.yaml  langgraph.json  main.ipynb  main.py  pyproject.toml  test.py
source/neurapolis_cognitive_architecture/: __init__.py  main.py  setup.py
source/neurapolis_cognitive_architecture/config/: base_config.py  config.py  config_development.py  config_production.py  config_staging.py
source/neurapolis_cognitive_architecture/enums/: __init__.py  cogitive_architecture_step.py  graph_step.py  message_role.py
source/neurapolis_cognitive_architecture/graph/: __init__.py  graph.py  graph_builder.py
source/neurapolis_cognitive_architecture/graph/edges/: __init__.py  after_decider_to_retriever_or_replier_conditional_edge.py
source/neurapolis_cognitive_architecture/graph/nodes/: __init__.py  agent_node.py  decider_node.py  mentioned_files_retriever_node.py  old.py  replier_node.py  retriever_node.py  tool_node.py  tools.py  tools_node.py
source/neurapolis_cognitive_architecture/models/: __init__.py  cognitive_architecture_config.py  graph_config.py  message.py  my_ai_message.py  my_human_message.py  state.py
source/neurapolis_cognitive_architecture/utilities/: __init__.py  get_cognitive_architecture_config_by_quality_preset.py  get_last_message_of_type.py  truncate_messages.py
source/neurapolis_cognitive_architecture_test/: test.py
src/cognitive_architecture/: agent.py  main.ipynb
src/cognitive_architecture/utils/: nodes.py
src/neurapolis_cognitive_architecture/: agent.py  app.py  main.py  server.py
src/neurapolis_cognitive_architecture/models/: ai_message.py  message.py  user_message.py
src/neurapolis_cognitive_architecture/utils/: nodes.py  state.py  tools.py
