[tool.poetry]
name = "neurapolis-cognitive-architecture"
version = "0.1.15"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{ include = "neurapolis_cognitive_architecture", from = "source" }]

[tool.poetry.dependencies]
python = "^3.12,<3.13"
langgraph = "^0.2.34"
langchain-core = "^0.3.9"
langchain-openai = "^0.2.2"
langchain-community = "^0.3.1"
python-dotenv = "^1.0.1"
langchain-aws = "^0.2.2"
langgraph-checkpoint = "^2.0.1"
langserve = "^0.3.0"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
sse-starlette = "^2.1.3"
pytz = "^2024.2"
neurapolis-retriever = { git = "https://github.com/neuraflow-github/neurapolis-retriever.git" }
langchain-anthropic = "^0.2.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"