[tool.poetry]
name = "neurapolis-cognitive-architecture"
version = "0.1.15"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    {include = "neurapolis_cognitive_architecture", from = "source"},
    {include = "neurapolis_cognitive_architecture_test", from = "source"},
]

[tool.poetry.dependencies]
python = "^3.12,<3.13"
langgraph = "^0.2.34"
langchain-core = "^0.3.9"
langgraph-checkpoint = "^2.0.1"
langserve = "^0.3.0"
neurapolis-retriever = { git = "https://github.com/neuraflow-github/neurapolis-retriever.git" }
langchain-anthropic = "^0.2.3"
langgraph-checkpoint-postgres = "^2.0.6"
neurapolis-common = { git = "https://github.com/neuraflow-github/neurapolis-common.git" }
psycopg-binary = "^3.2.3"
langchain-aws = "^0.2.9"
bugsnag = "^4.7.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
